--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind utilities;
+@tailwind components;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer utilities {
+	@variants responsive {
+		/* Chrome, Safari and Opera */
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
 
-* {
-  box-sizing: border-box;
+		.no-scrollbar {
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none; /* Firefox */
+		}
+
+		.main-window {
+			scroll-behavior: smooth;
+			scroll-snap-type: y mandatory;
+		}
+
+		.main-window:nth-child(1),
+		.main-window:nth-child(2),
+		.main-window:nth-child(3),
+		.main-window:nth-child(4),
+		.main-window:nth-child(5),
+		.main-window:nth-child(6) {
+			scroll-snap-align: start;
+		}
+	}
 }
